--- a/src/i18n/global.fr.yml
+++ b/src/i18n/global.fr.yml
@@ -1,4 +1,8 @@
 fr:
+  about: À Propos
   homepage: Accueil
   metadata: Méta-données
+  no_result: Aucun résultat.
+  no_tags: Aucun tag
+  owner: Responsable
   search: Rechercher
