--- a/src/i18n/global.en.yml
+++ b/src/i18n/global.en.yml
@@ -3,6 +3,7 @@ en:
   appname: DevPortal
   applications: Applications
   application: Application
+  components: Components
   homepage: Homepage
   metadata: Metadata
   no_result: No result.
