feat: add domain table and display applicaiton domain

--- a/src/i18n/global.en.yml
+++ b/src/i18n/global.en.yml
@@ -4,6 +4,7 @@ en:
   applications: Applications
   application: Application
   components: Components
+  domain: Domain
   homepage: Homepage
   metadata: Metadata
   no_result: No result.
