--- a/src/i18n/global.fr.yml
+++ b/src/i18n/global.fr.yml
@@ -1,6 +1,7 @@
 fr:
   about: À Propos
   components: Composants
+  domain: Domaine
   homepage: Accueil
   metadata: Méta-données
   no_result: Aucun résultat.
