refactor: rename project from devportal to appatlas

--- a/src/i18n/global.en.yml
+++ b/src/i18n/global.en.yml
@@ -1,6 +1,6 @@
 en:
   about: About
-  appname: DevPortal
+  appname: AppAtlas
   applications: Applications
   application: Application
   components: Components
