--- a/src/i18n/components.fr.yml
+++ b/src/i18n/components.fr.yml
@@ -1,6 +1,10 @@
 fr:
   action:
     new: Nouveau composant
+  alert:
+    new:
+      success: Le composant '__NAME__' a été créé.
+  name: Nom
   type:
     values:
       library: Bibliothèque
