--- a/src/i18n/global.en.yml
+++ b/src/i18n/global.en.yml
@@ -1,5 +1,8 @@
 en:
   about: About
+  action:
+    close: Close
+    create: Create
   appname: AppAtlas
   applications: Applications
   application: Application
