--- a/src/i18n/global.fr.yml
+++ b/src/i18n/global.fr.yml
@@ -1,5 +1,8 @@
 fr:
   about: À Propos
+  action:
+    close: Fermer
+    create: Créer
   components: Composants
   domain: Domaine
   homepage: Accueil
